# RizwanRabbitMQChatApp

./: README.txt
riz_example/: CMakeLists.txt  constants.h  init.cpp  init.h  user1.cpp  user2.cpp
